<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealTalk</string>
    <string name="intro_message">RealTalk (Alpha Release)</string>
    <string name="create_user_string">Create User</string>
    <string name="authenticate_user_string">Login</string>
    <string name="remove_user_string">Delete Account</string>
    <string name="query_header">Query Results:</string>
    <string name="query_results">Press Query to display User ID</string>
    <string name="uname_hint">Type user name</string>
    <string name="query_instr">This tests the database connection which manages RealTalks users\nSimply enter a users name to return get the users id.\n (For Testing Purposes: use UserX where X = 1,2,3,4 etc)</string>
    <string name="pword_hint">Type password</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Haven\'t signed up yet?</string>
    <string name="ad">ADVERTISEMENT!</string>
    <string name="message_hint">Enter message</string>
    <string name="send">Send</string>
    <string name="title_activity_select_room">SelectRoomActivity</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_pword">Change Password</string>
    <string name="old_pword">Old Password</string>
    <string name="new_pword">New Password</string>
    <string name="conf_new_pword">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_acc_button">Click Here to Delete Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="logo">Logo</string>
    <string name="create_room">Create Room</string>
    <string name="title_activity_create_room">CreateRoomActivity</string>
    <string name="room_name_hint">Enter Room Name</string>
    <string name="room_description_hint">Enter Room Description</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="leave_room">Leave Room</string>
    <string name="room">Room</string>
    <string name="user">User</string>
    <string name="details">Details</string>
    <string name="new_user">New User</string>
    <string name="joined_rooms">Joined Rooms</string>
    <string name="unjoined_rooms">Other Nearby Rooms</string>
    <string name="network_failed">Sorry, you are disconnected from the network.</string>
    <string name="join_room_failed">Failed to join room. Please try again.</string>
    <string name="leave_room_failed">Unable to log you out of the room</string>
    <string name="server_error">Sorry, there has been a server error.</string>
    <string name="server_down">The server is down. Please try again later.</string>
    <string name="init_complete">Initialization complete</string>
    <string name="huskysoftlogo">HuskySoft</string>
    <string name="realtalk">RealTalk</string>
    <string name="anon">Chat Anonymously</string>
    <string name="turn_gps_on">Please turn on a location service providor (wifi/gps/cellular).</string>
    <string name="gps_out_of_service">GPS is out of service.</string>
    <string name="gps_unavailable">GPS is temporarily unavailable.</string>
    <string name="leaving_room">Leaving room. Please wait...</string>
    <string name="login_failed">Sorry, we failed to log you in.</string>
    <string name="invalid_fields">Invalid fields</string>
    <string name="fill_fields">Please fill in all of the fields.</string>
    <string name="close">Close</string>
    <string name="invalid_input">Invalid input</string>
    <string name="pword_mismatch">Passwords do not match.  Please try again.</string>
	<string name="long_pword">Password must not exceed 20 characters.  Please try again.</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="confirm_delete">Are you sure you want to delete your account?</string>
	<string name="load_user_details">Loading user details. Please wait...</string>
	<string name="old_pword_incorrect">Old password incorrect.  Please try again.</string>
	<string name="pword_changed">Password changed.</string>
	<string name="pword_changed_title">Password Changed</string>
	<string name="invalid_pword">Invalid Password</string>
	<string name="invalid_uname">Invalid Username</string>
	<string name="long_uname">Username must not exceed 20 characters.  Please try again.</string>
	<string name="uname_spaces">Username may not contain spaces.  Please try again.</string>
	<string name="invalid_field">Invalid Field</string>
	<string name="long_room_name">Room Name must not exceed 40 characters.</string>
	<string name="long_room_desc">Room Description must not exceed 100 characters.</string>
	<string name="init">Initializing RealTalk resources for the first time. Please wait...</string>
	<string name="enter_info">Please enter a username and password.</string>
	<string name="desc">Description</string>
	<string name="active_users">Active Users</string>
	<string name="creator">Creator</string>
	<string name="leave">Leave</string>
	<string name="confirm_logout">Are you sure you want to log out?</string>
	<string name="users">users</string>
	<string name="enter">Enter</string>
	<string name="join">Join</string>
	<string name="invalid_uname_pword">Invalid username/password. Please try again.</string>
	<string name="creating_room">Creating room. Please wait...</string>
	<string name="entering_room">Entering room. Please wait...</string>
	<string name="updating_server">Updating Server. Please wait...</string>
	<string name="uname_exists">Username already exists.  Please choose another username.</string>
	<string name="account_deleted_title">Account deleted</string>
	<string name="account_deleted">Your account has been deleted.</string>
	<string name="account_not_deleted_title">Account not deleted</string>
	<string name="account_not_deleted">Error.  Your account has not been deleted.</string>
</resources>