<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_account" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:hint="@string/uname_hint"
        android:ems="10" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_below="@+id/user"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/pword_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conf_pword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/create_account"
        android:onClick="addUser" />

    <EditText
        android:id="@+id/conf_pword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pword"
        android:layout_below="@+id/pword"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

</RelativeLayout>