<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ChatRoomActivity" >
    
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/linearLayout1"
            android:background="#bcbcbc"
            android:onClick="leaveRoom"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/leave_room"
            android:id="@+id/leaveButton" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/leaveButton" >

            <realtalk.util.AutoFitTextView
                android:id="@+id/chatRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/room"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff" />

            <realtalk.util.AutoFitTextView
                android:id="@+id/userTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/user"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fff" />
        </LinearLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
	    <ListView 
	        android:id="@+id/list"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_above="@+id/message"
	    	android:stackFromBottom="true"
	    	android:transcriptMode="normal" >
	    </ListView>
	    
	    <Button
	        android:id="@+id/send"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:onClick="createMessage"
	        android:text="@string/send" />
	
	    <AutoCompleteTextView
	        android:id="@+id/message"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:hint="@string/message_hint" >
	

	    </AutoCompleteTextView>
	</RelativeLayout>
</RelativeLayout>