<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoomActivity" >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <realtalk.util.AutoFitTextView
                android:id="@+id/createRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/create_room"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff" />

            <realtalk.util.AutoFitTextView
                android:id="@+id/userTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/user"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fff" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/topBar" >
        
        <EditText
	        android:id="@+id/roomName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/createRoomTitle"
	        android:layout_marginTop="14dp"
	        android:ems="10"
	        android:hint="@string/room_name_hint"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/roomName"
	        android:layout_below="@+id/roomName"
	        android:layout_marginTop="14dp"
	        android:ems="10"
	        android:hint="@string/room_description_hint"
	        android:inputType="text" />

	    <Button
	        android:id="@+id/createRoomButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/description"
	        android:layout_below="@+id/description"
	        android:layout_marginTop="42dp"
	        android:onClick="addRoom"
	        android:text="@string/create_room" />
        
    </RelativeLayout>


</RelativeLayout>